--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </style>
   <body>
   	<script type="text/javascript" src="script.js"></script>
+  	<script type="text/javascript" src="draw.js"></script>
   </body>
 </html>
