--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </style>
   <body>
   	<script type="text/javascript" src="script.js"></script>
+    <canvas id="myCanvas" width="1920" height="1080">
   	<script type="text/javascript" src="draw.js"></script>
   </body>
 </html>
