Created lassoSelection function

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   	<script type="text/javascript" src="script.js"></script>
     <canvas id="myCanvas" width="1920" height="1080">
   	<script type="text/javascript" src="draw.js"></script>
+    <script type="text/javascript" src ="lasso.js"></script>
   </body>
 </html>
