Implemented drag without constraints

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             border-radius: 1px;
         }
 
-        .not_possible {
+        .not_possible rect{
             fill: white;
         }
 
-        .possible {
-            fill: gray;
+        .possible rect{
+            fill: lightgray;
         }
 
-        .selected {
-            fill: gray;
+        .selected rect{
+            fill: white;
         }
   </style>
   <body>
