--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         .selected rect{
             fill: white;
         }
+
+        .elementbox:hover{
+            cursor: grab;
+        }
+        
+        .elementlabel:hover{
+          cursor: grab;
+        }
   </style>
   <body>
   	<script type="text/javascript" src="script.js"></script>
