--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
   	<script type="text/javascript" src="script.js"></script>
   	<script type="text/javascript" src="draw.js"></script>
     <script type="text/javascript" src ="lasso.js"></script>
+    <script type="text/javascript" src ="dupED.js"></script>
   </body>
 </html>
