--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <script type="text/javascript" src="./d3-lasso.min.js"></script>
   </head>
   <style>
+        div.tooltip {
+            position: absolute;
+            text-align: center;
+            width: auto;
+            height: auto;
+            padding: 5px;
+            font: 12px sans-serif;
+            background: whitesmoke;
+            border: 1px;
+            border-radius: 3px;
+            pointer-events: none;
+        }
+
         .lasso path {
             stroke: rgb(80,80,80);
             stroke-width:2px;
